5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1706_3059.log
== TEST (2019-04-29 18:16:42) 
-- CODE:
valor=float(input("qual o cinsumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if a>0 and a<=100:
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:16:50) 
-- CODE:
valor=float(input("qual o cinsumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- EXECUTION TIME:
0.191284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 2, in <module>
    if a>0 and a<=100:
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:17:06) 
-- CODE:
valor=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- EXECUTION TIME:
0.130026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 2, in <module>
    if a>0 and a<=100:
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:17:07) 
-- CODE:
valor=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if a>0 and a<=100:
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:18:13) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:18:39) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- EXECUTION TIME:
0.137043
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:18:40) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:18:40) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- EXECUTION TIME:
0.209974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:18:40) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- EXECUTION TIME:
0.142579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:18:53) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
	elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
	elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
	else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
File "XXXX", line 5
    elif a>100 and a<=200:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:18:54) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
	elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
	elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
	else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
File "XXXX", line 5
    elif a>100 and a<=200:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:19:09) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
	elif a>100 and a<=200:
		valor= (a*1,30)+10
		print(round(valor,2))
		elif a>200 and a<=300:
		valor= (a*1,40)+20
		print(round(valor,2))
		else:
		valor= (a*1,50)+25
		print(round(valos,2))


-- ERROR:
File "XXXX", line 5
    elif a>100 and a<=200:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:20:47) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:21:19) 
-- CODE:
a=float(int(input("qual o consumo?")))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:16) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a.1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a.1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a.1,40)+20
	print(round(valor,2))
else:
	valor= (a.1,50)+25
	print(round(valos,2))


-- ERROR:
File "XXXX", line 3
    valor= (a.1,20)+1
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:28) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= a*1,20+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= a*1,30+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= a*1,40+20
	print(round(valor,2))
else:
	valor= a*1,50+25
	print(round(valos,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valor,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:19) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print("round(valor,2)")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:27) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print("round(valor,2)")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:28:32) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print("round(valor,2)")


-- EXECUTION TIME:
0.213894
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:28:38) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valor,2))


-- EXECUTION TIME:
0.176957
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:47) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valor,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:30:01) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valor,2))


-- EXECUTION TIME:
0.154401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3059/main.py", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:10) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valor,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:35:48) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a*1,20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a*1,30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a*1,40)+20
	print(round(valor,2))
else:
	valor= (a*1,50)+25
	print(round(valor,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor= (a*1,20)+1
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:36:18) 
-- CODE:
a=float(input("qual o consumo?"))
if a>0 and a<=100:
	valor= (a* 1.20)+1
	print(round(valor,2))
elif a>100 and a<=200:
	valor= (a* 1.30)+10
	print(round(valor,2))
elif a>200 and a<=300:
	valor= (a* 1.40)+20
	print(round(valor,2))
else:
	valor= (a* 1.50)+25
	print(round(valor,2))


-- EXECUTION TIME:
0.125801
-- TEST CASE 1:
---- input:
100
---- correct output:
121.0
---- user output:
121.0
-- TEST CASE 2:
---- input:
301
---- correct output:
476.5
---- user output:
476.5
-- TEST CASE 3:
---- input:
1
---- correct output:
2.2
---- user output:
2.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
